openapi: Document `delivery_email` property.
